Updated camera viewing page (Needs to be redone, currently hacked together)

--- a/GameData/TelemachusContinued/Plugins/PluginData/Telemachus/CameraTest.html
+++ b/GameData/TelemachusContinued/Plugins/PluginData/Telemachus/CameraTest.html
@@ -246,7 +246,7 @@ function start()
 }
 
 </script>
-<title>JavaScript Refresh Example</title>
+<title>Telemachus - Cameras</title>
 </head>
 
 <body onload="JavaScript:start();">
