--- a/GameData/TelemachusContinued/Plugins/PluginData/Telemachus/information.html
+++ b/GameData/TelemachusContinued/Plugins/PluginData/Telemachus/information.html
@@ -156,6 +156,15 @@
                         <button onclick="window.open('speech.html')">Open</button>
                     </p>
                 </div>
+                <h3>Camera View</h3>
+                <div>
+                    <p>
+                        This page demoonstrates a JPEG stream from RPM.
+                    </p>
+                    <p>
+                        <button onclick="window.open('CameraTest.html')">Open</button>
+                    </p>
+                </div>
             </div>
         </div>
         <div id="tabs-2">
